[gd_scene load_steps=11 format=2]

[ext_resource path="res://scr/images/Fly/fly.png" type="Texture" id=1]
[ext_resource path="res://scr/images/exclamation.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemies/Fly.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 110.0

[sub_resource type="CircleShape2D" id=5]
radius = 100.0

[sub_resource type="GDScript" id=10]
script/source = "extends Area2D


func _physics_process(_delta):
	global_position = get_parent().initial_position
"

[sub_resource type="CircleShape2D" id=6]
radius = 100.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "alert"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -13 ) ]
}

[node name="Fly" type="KinematicBody2D" groups=["fly"]]
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="PlayerDetection" type="Area2D" parent="."]
modulate = Color( 1, 0.937255, 0, 0.247059 )
light_mask = 0
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 4 )

[node name="PlayerChase" type="Area2D" parent="."]
modulate = Color( 0, 1, 0.203922, 0.247059 )
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChase"]
shape = SubResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
rotation = 0.0944397

[node name="Sprite" type="Sprite" parent="Node2D"]
rotation = -2.35619
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 2 )

[node name="Wander_radius" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false
script = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wander_radius"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "alert"
anims/RESET = SubResource( 8 )
anims/alert = SubResource( 9 )

[node name="ItemKill" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ItemKill" to="." method="_on_ItemKill_timeout"]
